--- a/权重初始化.md
+++ b/权重初始化.md
@@ -36,5 +36,7 @@ def kaiming(m,n):
     return torch.randn(m,h)*math.sqrt(2./m)
 ```
 
+# reference
 
-https://zhuanlan.zhihu.com/p/22028079
+- https://zhuanlan.zhihu.com/p/62850258
+- https://zhuanlan.zhihu.com/p/22028079
